2005-12-14  Dalibor Topic  <robilad@kaffe.org>

	* developers/resync-classpath.sh: Make sure that we sync with the 
	distribution version of GNU Classpath, not with the CVS. That way,
	all the generated files like .info files are taken care of, without
	forcing Kaffe CVS users to install additional tools.

	Reported by:  Kiyo Inaba  <inaba@src.ricoh.co.jp>

	* libraries/javalib/external/classpath: Resynched GNU Classpath.
	Removed various files not present in the distribution tarball.

2005-12-14  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/vmspecific/java/io/ObjectOutputStream.java,
	libraries/javalib/vmspecific/java/io/ObjectStreamClass.java:
	Resurrected Guilhem's seralization patches from 2005-12-10 and moved 
	them over to vmspecific classes until they are checked in into 
	GNU Classpath.

2005-12-13  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* kaffe/kaffevm/access.c
	(outerof): New function,
	(checkAccess): Corrected the handling of private access.

2005-12-13  Dalibor Topic  <robilad@kaffe.org>

        * libraries/javalib/external/classpath: Resynched GNU Classpath.

2005-12-11  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/nio/gnu_java_nio_VMPipe.c:
	Added file from GNU Classpath.

	* include/Makefile.am: Added gnu_java_nio_VMPipe.h to 
	generated headers.

	* libraries/clib/nio/Makefile.am: Added gnu_java_nio_VMPipe.c.

	* libraries/javalib/Makefile.am.in: Only link glibj.zip to rt.jar if
	such link does not exist.

	* libraries/javalib/vmspecific/gnu/java/nio/VMPipe.java:
	Switched back to version from GNU Classpath, to avoid confusing the
	GNU Classpath jni function comparison scripts.

2005-12-11  Guilhem Lavaux  <guilhem@kaffe.org>

	* test/regression/TestSerialPersistent.java: Fix expected output.
	At the moment it is exactly the same compared to JDK's. Removed
	private modifiers.

2005-12-11  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Pass on jikes program name to 
	GNU Classpath's configure script.
